# Automatic-CV-filtering-in-CL

./: .env.example  .gitignore  CMakeLists.txt  Data.lnk  README.md
src/: main.cpp
src/ai/: AIFactory.h  GeminiClient.cpp  GeminiClient.h  IAIClient.h  OllamaClient.cpp  OllamaClient.h
src/controller/: CVController.cpp  CVController.h  CVService.cpp  CVService.h
src/exception/: DuplicateCVException.h  FileException.h  InvalidInputException.h
src/model/: CV.cpp  CV.h  CVDatabase.cpp  CVDatabase.h  CVFilter  CVFilter.h  Candidate.cpp  Candidate.h  Education.cpp  EducationFilter.h  ExperienceFilter.cpp  ExperienceFilter.h  FileManager.cpp  FileManager.h  SkillFilter.cpp  SkillFilter.h
src/parser/: CodeParser.cpp  CodeParser.h  DocumentParser.h  DocxParser.cpp  DocxParser.h  PdfParser.cpp  PdfParser.h
src/scanner/: AdvancedScan.cpp  AdvancedScan.h  BasicScan.cpp  BasicScan.h  ScanEngine.cpp  ScanEngine.h  ScanStrategy.cpp  ScanStrategy.h
src/utils/: EnvLoader.h  Logger.cpp  Logger.h  Utils.cpp  Utils.h
src/view/: CVController.cpp  InputView.cpp  InputView.h  MenuView.cpp  MenuView.h  OutputView.cpp  OutputView.h
test/: testInput.cpp
